--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #46529d;
+  color: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-center{
+  text-align: center;
+}
+
+.container{
+  width: 60%;
+  margin: 10% auto;
+}
+.listItems{
+  background: #fff;
+  color: #46529d;
+}
+.listItems p{
+  margin: 0;
+  text-align: center;
+  padding: 10px 0px;
+}
+.listItems span{
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 20px;
+  border: 0.3px solid #ccc;
+}
+.listItems span.title{
+  background: #2ebaee;
+  color: #fff;
+}
+.listItems span.name,
+form input[type=text] {
+  width: 60%;
+}
+.listItems span.age,
+form input[type=number] {
+  width: 30%;
+}
+.listItems span.action,
+form input[type=submit] {
+  width: 10%;
+}
+.listItems span.icon{
+  color: #f00;
+  cursor: pointer;
+}
+form input{
+  padding: 10px;
+  background: #ebebeb;
+  border: transparent;
+  border: 0.3px solid #ccc;
+}
+form input[type=submit] {
+  background: #2ebaee;
+  border: 0.3px solid #2ebaee;
+  color: #fff;
+  cursor: pointer;
 }
